--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,19 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+build-storybook.log*
 
 # System Files
 .DS_Store
 Thumbs.db
 
 .nx/cache
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
