--- a/package.json
+++ b/package.json
@@ -2,14 +2,39 @@
   "name": "react-utils",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
   "private": true,
-  "dependencies": {},
+  "scripts": {
+    "packages:build": "nx run-many -t build",
+    "packages:version": "changeset version",
+    "packages:release": "changeset publish"
+  },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
+    "@mjsdo/eslint-plugin": "^0.0.5",
     "@nx/js": "17.2.8",
-    "nx": "17.2.8"
+    "@types/eslint": "^8",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nx": "17.2.8",
+    "parcel": "^2.11.0",
+    "prettier": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "packageManager": "yarn@4.0.2",
+  "dependencies": {
+    "@changesets/cli": "^2.27.1"
+  }
 }
