--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "packages:build": "nx run-many -t build",
-    "packages:version": "changeset version",
-    "packages:release": "changeset publish"
+    "build:packages": "nx affected -t build",
+    "version:packages": "changeset version",
+    "release:packages": "changeset publish"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
