--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@changesets/changelog-github": "^0.5.0",
     "@mjsdo/eslint-plugin": "^0.0.5",
     "@nx/js": "17.2.8",
+    "@parcel/packager-ts": "2.11.0",
+    "@parcel/transformer-typescript-types": "2.11.0",
     "@types/eslint": "^8",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
@@ -28,6 +30,7 @@
     "prettier": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
   "workspaces": [
