--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build:packages": "nx affected -t build",
+    "build:esm-declaration": "node ./scripts/createEsmDeclarations.js",
+    "build:packages": "nx affected -t build && yarn build:esm-declaration",
     "version:packages": "changeset version",
     "release:packages": "changeset publish"
   },
@@ -15,6 +16,7 @@
     "@parcel/packager-ts": "2.11.0",
     "@parcel/transformer-typescript-types": "2.11.0",
     "@types/eslint": "^8",
+    "@types/fs-extra": "^11",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -25,9 +27,12 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "fs-extra": "^11.2.0",
+    "glob": "^10.3.10",
     "nx": "17.2.8",
     "parcel": "^2.11.0",
     "prettier": "^3.2.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
