--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,8 +45,10 @@ jobs:
         run: yarn install --immutable
 
       - name: Enable affected command
-        uses: nrwl/nx-set-shas@v3
-        run: git branch --track main origin/main
+        uses: nrwl/nx-set-shas@v4
+
+      # https://nx.dev/ci/recipes/set-up/monorepo-ci-github-actions#process-only-affected-projects-with-one-job-on-github-actions
+      - run: git branch --track main origin/main
 
       - name: Build
         run: yarn build:packages --configuration=ci
