--- a/package.json
+++ b/package.json
@@ -7,20 +7,34 @@
     "build:esm-declaration": "node ./scripts/createEsmDeclarations.js",
     "build:packages": "nx affected -t build && yarn build:esm-declaration",
     "version:packages": "changeset version",
-    "release:packages": "changeset publish"
+    "release:packages": "changeset publish",
+    "test:packages": "nx affected -t test",
+    "test:all": "nx run-many -t test"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@changesets/changelog-github": "^0.5.0",
     "@mjsdo/eslint-plugin": "^0.0.5",
+    "@nx/jest": "^17.2.8",
     "@nx/js": "17.2.8",
     "@parcel/packager-ts": "2.11.0",
     "@parcel/transformer-typescript-types": "2.11.0",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/babel__core": "^7",
+    "@types/babel__preset-env": "^7",
     "@types/eslint": "^8",
     "@types/fs-extra": "^11",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -29,6 +43,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.10",
+    "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
     "nx": "17.2.8",
     "parcel": "^2.11.0",
     "prettier": "^3.2.1",
@@ -36,6 +52,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
   "workspaces": [
