--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["nrwl.angular-console"]
+  "recommendations": [
+    "nrwl.angular-console",
+    "esbenp.prettier-vscode"
+  ]
 }
