chore: config 업데이트

--- a/nx.json
+++ b/nx.json
@@ -16,7 +16,7 @@
         "configFile": "{projectRoot}/vitest.config.mts"
       }
     },
-    "cy:component-test": {
+    "cy:component": {
       "executor": "@nx/cypress:cypress"
     }
   },
