--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "nx affected -t test",
     "test:all": "nx run-many -t test",
     "cy:open": "cypress open",
-    "cy:component": "nx affected -t cy:component"
+    "cy:component": "nx affected -t cy:component",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
@@ -22,6 +24,14 @@
     "@nx/vite": "^17.2.8",
     "@parcel/packager-ts": "2.11.0",
     "@parcel/transformer-typescript-types": "2.11.0",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.10",
+    "@storybook/react": "^7.6.10",
+    "@storybook/react-vite": "^7.6.10",
+    "@storybook/test": "^7.6.10",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@testing-library/cypress": "^10.0.1",
@@ -46,6 +56,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "find-pkg-dir": "^2.0.0",
     "find-yarn-workspace-root": "^2.0.0",
     "fs-extra": "^11.2.0",
@@ -58,6 +69,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
+    "storybook": "^7.6.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
