--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nx/vite": "^17.2.8",
     "@parcel/packager-ts": "2.11.0",
     "@parcel/transformer-typescript-types": "2.11.0",
+    "@radix-ui/react-context": "^1.0.1",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
