--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@parcel/packager-ts": "2.11.0",
     "@parcel/transformer-typescript-types": "2.11.0",
     "@radix-ui/react-context": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
