getPkgName 유틸리티 추가

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "fs-extra": "^11.2.0",
     "glob": "^10.3.10",
     "jsdom": "^23.2.0",
+    "load-pkg": "^4.0.0",
     "nx": "17.2.8",
     "parcel": "^2.11.0",
     "prettier": "^3.2.1",
