--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,6 @@
     "baseUrl": ".",
     "importHelpers": true,
     "resolveJsonModule": true,
-    "types": ["@testing-library/cypress", "cypress", "node"]
+    "types": ["@testing-library/cypress", "cypress", "node", "types"]
   }
 }
