--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
+    "sass": "^1.70.0",
     "storybook": "^7.6.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
