--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ yarn-error.log
 testem.log
 /typings
 build-storybook.log*
+storybook-static
+tsconfig.tsbuildinfo
 
 # System Files
 .DS_Store
@@ -58,3 +60,4 @@ reports/
 
 # env
 .env*
+
