--- a/packages/use-get-state/package.json
+++ b/packages/use-get-state/package.json
@@ -31,6 +31,9 @@
     "README.md",
     "dist"
   ],
+  "devDependencies": {
+    "@mjsdo/shared-dev": "workspace:*"
+  },
   "peerDependencies": {
     "react": "^17.0 || ^18.0",
     "react-dom": "^17.0 || ^18.0"
