e2e test configuration 추가

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "nx affected -t test",
     "cy:open": "cypress open",
     "cy:component": "nx affected -t cy:component",
+    "cy:e2e": "start-server-and-test \"yarn storybook --ci\" http://localhost:6006 \"nx affected -t cy:e2e\"",
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
     "deploy:storybook": "rimraf storybook-static && yarn build:storybook && touch ./storybook-static/.nojekyll && gh-pages -d ./storybook-static -t true",
@@ -78,6 +79,7 @@
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "sass": "^1.70.0",
+    "start-server-and-test": "^2.0.3",
     "storybook": "^7.6.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
