--- a/packages/use-get-state/package.json
+++ b/packages/use-get-state/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/mjsdo/react-utils.git"
   },
-  "source": "./src/index.tsx",
+  "source": "./src/index.ts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
@@ -25,7 +25,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn clean && parcel build",
-    "cy:component": "cypress run --component"
+    "cy:component": "cypress run --component",
+    "cy:e2e": "cypress run"
   },
   "files": [
     "README.md",
