--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,9 +52,15 @@ jobs:
           echo "BASE: ${{ steps.setSHAs.outputs.base }}"
           echo "HEAD: ${{ steps.setSHAs.outputs.head }}"
 
+      - name: Build
+        run: yarn build:all
+
       - name: Test
         # 추가할 `scripts`는 여기에.
         run: yarn nx affected -t test cy:component --configuration=ci
+
+      - name: E2E
+        run: yarn cy:e2e
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
