--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
     "deploy:storybook": "rimraf storybook-static && yarn build:storybook && touch ./storybook-static/.nojekyll && gh-pages -d ./storybook-static -t true",
-    "type": "tsc --noEmit"
+    "type": "tsc --noEmit --incremental --watch"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
