--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@parcel/transformer-typescript-types": "2.11.0",
     "@radix-ui/react-context": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
