--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -32,6 +32,9 @@
     "README.md",
     "dist"
   ],
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2"
+  },
   "peerDependencies": {
     "react": "^17.0 || ^18.0",
     "react-dom": "^17.0 || ^18.0"
