--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nx/vite": "^17.2.8",
     "@parcel/packager-ts": "2.11.0",
     "@parcel/transformer-typescript-types": "2.11.0",
+    "@radix-ui/number": "^1.0.1",
     "@radix-ui/react-context": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
